fixed spacing using margin on header

--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
 #first-block {
     background-color: #1f2937;
     display: flex;
-    align-items: end;
-    justify-content: space-around;
+    
 }
 
 .header-text {
@@ -19,19 +18,16 @@
     margin: 5px;
 }
 
-.header-text:first-child {
-    margin-right: auto;
-}
-
 .header-logo{
     font-size: 10pt;
     color: white;
     margin-right: auto;
+    margin-left: 20px;
 }
 .header-link {
     font-size: 8pt;
     color: white;
-    margin-left: auto;
+    margin-right: 10px;
 }
 
 #second-block {
